# B2b-Newsletter-and-Blog-Automation

./: .env.example  .gitignore  COLUMN-FIX-SUMMARY.md  DEPLOYMENT.md  QUICK-START.md  README.md  SETUP-INSTRUCTIONS.md  SLACK-SETUP-SUMMARY.md  SLACK-TROUBLESHOOTING.md  check_setup.py  pyproject.toml  requirements.txt  run_phase1.py  run_phase2.py  run_test.py  setup_sheet.py  test_slack.py
config/: editorial-guardrails.json  sources.json  stakeholders.json  topic-rules.json
config/voices/: README.md  amber-beat-examples.md  amber-beat-newsroom.md  amber-homepage.md  jools-horton-lakins.md  madhur-gujar.md
docs/: 01-problem-statement.md  02-system-architecture.md  03-progress-tracker.md  04-whats-next.md  05-approach-and-decisions.md  06-data-entities.md  07-stage-details.md  08-insights-and-issues.md  09-full-specification.md  10-search-scraping-strategy.md  11-amber-beat-sop.md  12-web-interface-guide.md  13-slack-integration.md  README.md  slack-notification-flow.md
prompts/: blog-post.md  linkedin-post.md  newsletter.md  research-ingestion.md  shortlisting.md  topic-selection.md
src/: llm.py  main.py  persistence.py  sample_data.py  settings.py
src/api/: routes.py  ui_routes.py
src/graph/: pipeline.py  state.py
src/graph/nodes/: content_blog.py  content_linkedin.py  content_newsletter.py  content_newsroom.py  feedback.py  human_gate_1.py  (+7 more)
src/integrations/: sheets.py  slack.py
src/models/: __init__.py  database.py  enums.py  schemas.py
src/scrapers/: __init__.py  date_window.py  firecrawl_client.py  google_news.py  rss_feeds.py
static/: index.html
